Extract supports CSS and fix inconsistent spacing

--- a/_sass/_main.sass
+++ b/_sass/_main.sass
@@ -341,34 +341,6 @@ nav
   padding: 20px 0
   text-align: center
 
-#supporters
-  clear:  left
-
-  > h1
-    margin-bottom: 25px
-
-  ul
-    overflow: hidden
-    margin: 0 0 20px -2.1277%
-
-  li
-    width: 22.595%
-    min-height: 110px
-    float: left
-    margin: 0 0 1.965% 1.965%
-    background: #e7e7e7
-    border: solid 1px #e7e7e7
-
-    @media (max-width: 880px)
-      width: 47.5%
-
-    &:hover
-      border-color: $border-color
-      box-shadow: $border-color 0 0 10px inset
-
-      img
-        opacity: 1
-
 #jobs, #projects
   clear:  left
   &:after
@@ -507,3 +479,4 @@ section.coc
 @import "components/footer"
 @import "components/ribbon"
 @import "modules/slack"
+@import "modules/supporters"
